[package]
name = "cli-common"
version = "0.1.0"
authors = ["aankor <lambdasound@yandex.ru>","lucio tato <luciotato@narwallets.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
solana-client = "1.7.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
once_cell = "1.7.2"
thiserror = "1.0.24"
derive_more = "0.99.13"
bincode = "1.3.3"
shellexpand = "2.1.0"
log = "0.4.14"
fern = "0.6.0"
chrono = "0.4.19"
structopt = "0.3.21"
borsh = "0.9.1"
solana-sdk = "1.7.11"
anchor-lang = "0.14.0"
marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program" }
solana-account-decoder = "1.7.11"
