[package]
name = "score-past-epoch"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
borsh = "0.9"
bs58 = "0.4.0"
clap = "2.33.0"
log = "0.4.11"
regex = "1.5.4"
reqwest = { version = "0.11.3", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.62"
serde_yaml = "0.8.13"
solana-account-decoder = "1.7.11"
solana-clap-utils = "1.7.11"
solana-cli-config = "1.7.11"
solana-client = "1.7.11"
solana-logger = "1.7.11"
solana-sdk = "1.7.11"
solana-transaction-status = "1.7.11"
solana-vote-program = "1.7.11"
thiserror = "1.0.25"
spl-stake-pool = "0.4"
spl-token = "3.1"
solana-foundation-delegation-program-cli = { git = "https://github.com/solana-labs/stake-o-matic" }
solana-foundation-delegation-program-registry = { git = "https://github.com/solana-labs/stake-o-matic" }

[dev-dependencies]
indicatif = "0.15.0"
solana-validator = "1.7.11"
solana-vote-program = "1.7.11"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
